feat: Migrate from Jest to Vitest across all packages
- Updated logger package to use Vitest, including configuration and test syntax.
- Verified API package already had Vitest configured with all tests passing.
- Renamed jest-presets to vitest-presets and created new preset structure for browser and Node.js testing.
- Removed all Jest dependencies and added Vitest dependencies where needed.
- Created comprehensive README for vitest-presets.
- Added new test setup and environment configuration for API package.
- Implemented OpenAPI specification tests and health endpoint tests in API package.
- Established RLS migration helper and policies for database security.
- Created seed and reset scripts for database management.
- Configured Vitest for logger and API packages with appropriate settings.

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -2,23 +2,27 @@
   "name": "@repo/api-app",
   "type": "module",
   "scripts": {
-    "dev": "wrangler dev",
+    "dev": "wrangler dev --local",
+    "dev:node": "tsx watch src/index.ts",
     "deploy": "wrangler deploy --minify",
+    "deploy:dev": "wrangler deploy --env dev --minify",
+    "deploy:staging": "wrangler deploy --env staging --minify",
+    "deploy:production": "wrangler deploy --env production --minify",
     "cf-typegen": "wrangler types --env-interface CloudflareBindings"
   },
   "dependencies": {
-    "@repo/api": "workspace:*",
-    "@repo/logger": "workspace:*",
     "@hono/node-server": "^1.17.1",
     "@hono/swagger-ui": "^0.5.2",
     "@hono/zod-openapi": "^0.18.4",
     "@hono/zod-validator": "^0.7.4",
+    "@repo/api": "workspace:*",
+    "@repo/logger": "workspace:*",
+    "@supabase/supabase-js": "^2.80.0",
     "hono": "catalog:",
     "zod": "catalog:"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
-    "@repo/jest-presets": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "eslint": "catalog:",
     "prettier": "catalog:",
