--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -26,24 +26,20 @@
     "dev": "bunchee --watch",
     "lint": "eslint src/",
     "check-types": "tsc --noEmit",
-    "test": "jest"
-  },
-  "jest": {
-    "preset": "@repo/jest-presets/node"
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "pino": "^9.5.0",
     "pino-pretty": "^13.0.0"
   },
   "devDependencies": {
-    "@jest/globals": "^29.7.0",
     "@repo/eslint-config": "workspace:*",
-    "@repo/jest-presets": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/node": "catalog:",
     "bunchee": "^6.4.0",
     "eslint": "^9.39.0",
-    "jest": "^29.7.0",
-    "typescript": "5.9.3"
+    "typescript": "5.9.3",
+    "vitest": "^2.1.8"
   }
 }
