feat: add new UI components including Popover, Progress, RadioGroup, Resizable, ScrollArea, Select, Separator, Sheet, Skeleton, Slider, Sonner, Spinner, Switch, Table, Tabs, Textarea, ToggleGroup, Toggle, Tooltip
- Implemented Popover component with trigger and content.
- Added Progress component for displaying progress bars.
- Created RadioGroup and RadioGroupItem for radio button functionality.
- Developed ResizablePanelGroup and ResizableHandle for resizable panels.
- Introduced ScrollArea for scrollable content areas.
- Built Select component with various subcomponents for dropdown functionality.
- Added Separator for visual separation in layouts.
- Created Sheet component for modal-like overlays.
- Implemented Skeleton for loading placeholders.
- Developed Slider for adjustable values.
- Integrated Sonner for toast notifications.
- Added Spinner for loading indicators.
- Created Switch for toggle functionality.
- Built Table with header, body, footer, and cell components.
- Developed Tabs for tabbed navigation.
- Implemented Textarea for multi-line text input.
- Created ToggleGroup and Toggle for grouped toggle buttons.
- Added Tooltip for contextual hints and information.
- Updated turbo.json for build and development tasks.

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -9,16 +9,13 @@
     "./client": "./src/client.ts"
   },
   "scripts": {
-    "generate": "pop run --env-file=.env -- npm drizzle-kit generate",
+    "generate": "op run --env-file=.env -- pnpm drizzle-kit generate",
     "migrate": "op run --env-file=.env -- pnpm drizzle-kit migrate",
     "push": "op run --env-file=.env -- pnpm drizzle-kit push",
-    "pull": "pop run --env-file=.env -- npm drizzle-kit pull",
+    "pull": "op run --env-file=.env -- pnpm drizzle-kit pull",
     "check": "op run --env-file=.env -- pnpm drizzle-kit check",
     "up": "op run --env-file=.env -- pnpm drizzle-kit up",
     "studio": "op run --env-file=.env -- pnpm drizzle-kit studio",
-    "reset": "op run --env-file=.env -- tsx src/scripts/reset.ts",
-    "seed": "op run --env-file=.env -- tsx src/scripts/seed.ts",
-    "reset-seed": "pnpm reset && pnpm push && pnpm seed",
     "apply-rls": "op run --env-file=.env -- tsx src/migrations/apply-rls.ts"
   },
   "dependencies": {
