--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,20 +14,23 @@
     "@repo/tailwind-config": "workspace:*",
     "@repo/ui": "workspace:*",
     "hono": "catalog:",
+    "lucide-react": "^0.553.0",
+    "next": "16.0.1",
     "react": "catalog:react19",
     "react-dom": "catalog:react19",
-    "next": "16.0.1"
+    "recharts": "2.15.4",
+    "zod": "catalog:"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@tailwindcss/postcss": "catalog:",
     "@types/node": "catalog:",
     "@types/react": "catalog:react19",
     "@types/react-dom": "catalog:react19",
-    "@tailwindcss/postcss": "catalog:",
     "babel-plugin-react-compiler": "1.0.0",
-    "tailwindcss": "catalog:",
     "eslint": "catalog:",
-    "eslint-config-next": "16.0.1"
+    "eslint-config-next": "16.0.1",
+    "tailwindcss": "catalog:"
   }
 }
