--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "type": "module",
   "exports": {
-    ".": "./src/index.ts"
+    ".": "./src/index.ts",
+    "./types": "./src/types/index.ts"
   },
   "scripts": {
     "cf-typegen": "wrangler types --env-interface CloudflareBindings",
@@ -23,6 +24,8 @@
     "@hono/zod-validator": "^0.4.1",
     "@repo/db": "workspace:*",
     "hono": "^4.10.2",
+    "hono-pino": "^0.10.3",
+    "pino": "^9.14.0",
     "zod": "catalog:"
   },
   "devDependencies": {
