--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,6 +3,7 @@ packages:
   - 'packages/*'
 
 catalog:
+  '@tailwindcss/cli': ^4.1.14
   '@tailwindcss/postcss': ^4.1.14
   '@tanstack/react-form': ^1.23.7
   '@tanstack/react-query': 5.90.5
