feat(turbo): add environment variables to build task configuration

--- a/turbo.json
+++ b/turbo.json
@@ -16,6 +16,10 @@
         "dist/**",
         ".next/**",
         "!.next/cache/**"
+      ],
+      "env": [
+        "API_KEY",
+        "USER_ID"
       ]
     },
     "test": {
