feat(turbo): add build:styles and build:components tasks with environment variables

--- a/turbo.json
+++ b/turbo.json
@@ -46,6 +46,24 @@
       ],
       "cache": false,
       "persistent": true
+    },
+    "build:styles": {
+      "outputs": [
+        "dist/**"
+      ],
+      "env": [
+        "API_KEY",
+        "USER_ID"
+      ]
+    },
+    "build:components": {
+      "outputs": [
+        "dist/**"
+      ],
+      "env": [
+        "API_KEY",
+        "USER_ID"
+      ]
     }
   }
 }
