fix: update import path for customLogger in user route feat(turbo): add global environment variables for API_KEY and USER_ID

--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,10 @@
 {
   "$schema": "https://turborepo.com/schema.json",
   "ui": "tui",
+  "globalEnv": [
+    "API_KEY",
+    "USER_ID"
+  ],
   "tasks": {
     "build": {
       "inputs": [
