feat: add end-to-end tests for accessibility, dashboard, and homepage
- Implemented accessibility tests for the homepage, checking for visibility of main elements, keyboard navigation, heading structure, text contrast, and reduced motion preference.
- Created dashboard tests to verify the display of metric cards, weight and steps metrics, responsiveness across devices, chart visibility, and correct date formatting.
- Added homepage tests to ensure the page loads correctly, has the expected title, and displays the dashboard component.

test: set up Vitest configuration and environment variables

- Configured Vitest for testing with React, including setup files and coverage reporting.
- Established environment variables for testing purposes.

feat: implement revalidation API route

- Created a revalidation route that checks for a secret key in headers and revalidates the homepage if valid.

test: add unit tests for card and dashboard components

- Developed unit tests for the ContentCard component to verify rendering with props, handling of undefined values, and correct date formatting.
- Added tests for the Dashboard component to ensure it renders correctly.

feat: enhance dashboard functionality with data fetching and chart rendering

- Integrated API calls to fetch user data, goals, and metrics for the dashboard.
- Implemented logic to display current metrics and charts based on fetched data.

test: add utility and dashboard helper tests

- Created tests for utility functions and dashboard helpers to ensure correct functionality, including metric ID resolution, data transformation, and chart data creation.

chore: update environment variable schema validation

- Added validation for environment variables using Zod to ensure required variables are present and correctly formatted.

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,7 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui"
   },
   "dependencies": {
     "@repo/api": "workspace:*",
@@ -22,15 +26,24 @@
     "zod": "catalog:"
   },
   "devDependencies": {
+    "@playwright/test": "^1.48.2",
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@repo/vitest-presets": "workspace:*",
     "@tailwindcss/postcss": "catalog:",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
     "@types/node": "catalog:",
     "@types/react": "catalog:react19",
     "@types/react-dom": "catalog:react19",
+    "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/ui": "^2.1.8",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "catalog:",
     "eslint-config-next": "16.0.1",
-    "tailwindcss": "catalog:"
+    "jsdom": "^25.0.1",
+    "tailwindcss": "catalog:",
+    "vitest": "^2.1.8"
   }
 }
