--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,3 +1,8 @@
 {
   "extends": "@repo/typescript-config/nextjs.json",
+  "compilerOptions": {
+    "paths": {
+      "@/*": ["./src/*"]
+    }
+  }
 }
