--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -23,7 +23,8 @@
     "react": "catalog:react19",
     "react-dom": "catalog:react19",
     "recharts": "2.15.4",
-    "zod": "catalog:"
+    "zod": "catalog:",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@playwright/test": "^1.48.2",
