--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,6 +19,7 @@
     "@repo/ui": "workspace:*",
     "hono": "catalog:",
     "lucide-react": "^0.553.0",
+    "motion": "^12.23.24",
     "next": "16.0.1",
     "react": "catalog:react19",
     "react-dom": "catalog:react19",
