--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,13 +17,17 @@
     "@repo/logger": "workspace:*",
     "@repo/tailwind-config": "workspace:*",
     "@repo/ui": "workspace:*",
+    "@types/canvas-confetti": "^1.9.0",
+    "canvas-confetti": "^1.9.4",
     "hono": "catalog:",
     "lucide-react": "^0.553.0",
     "motion": "^12.23.24",
     "next": "16.0.1",
+    "ogl": "^1.0.11",
     "react": "catalog:react19",
     "react-dom": "catalog:react19",
     "recharts": "2.15.4",
+    "three": "^0.181.1",
     "zod": "catalog:",
     "zustand": "^5.0.8"
   },
@@ -39,6 +43,7 @@
     "@types/node": "catalog:",
     "@types/react": "catalog:react19",
     "@types/react-dom": "catalog:react19",
+    "@types/three": "^0.181.0",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/ui": "^2.1.8",
     "babel-plugin-react-compiler": "1.0.0",
