feat: migrate from Jest to Vitest, update service worker, and add version management

--- a/apps/web/.gitignore
+++ b/apps/web/.gitignore
@@ -39,3 +39,7 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# generated service worker (auto-generated from template)
+/public/sw.js
+/public/sw.mjs
