--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,6 +25,7 @@
     "lucide-react": "^0.553.0",
     "motion": "^12.23.24",
     "next": "16.0.1",
+    "next-pwa": "^5.6.0",
     "ogl": "^1.0.11",
     "react": "catalog:react19",
     "react-dom": "catalog:react19",
@@ -42,6 +43,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
+    "@types/next-pwa": "^5.6.9",
     "@types/node": "catalog:",
     "@types/react": "catalog:react19",
     "@types/react-dom": "catalog:react19",
