--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node scripts/generate-sw-version.mjs && next dev",
-    "build": "node scripts/generate-sw-version.mjs && next build",
-    "start": "next start",
+    "predev": "node scripts/generate-sw-version.mjs",
+    "dev": "next dev --webpack",
+    "prebuild": "node scripts/generate-sw-version.mjs",
+    "build": "next build --webpack",
+    "start": "next start --webpack",
     "lint": "eslint",
     "test": "vitest",
     "test:ui": "vitest --ui",
